--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<title>Xufeng Cai</title>
 	
-	<meta name="description" content="Xufeng Cai's homepage">
+	<meta name="description" content="Zhenyu Huang's homepage">
 	<meta name="image" content="">
 	<meta name="author" content="Xufeng Cai">
     	<meta name="keywords" content="Xufeng Cai, SJTU, UW-Madison, Optimization, Deep Learning (DL), Machine Learning (ML), Mathematics">
