--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
-	<title>Xufeng Cai</title>
+	<title>Zhenyu Huang</title>
 	
 	<meta name="description" content="Zhenyu Huang's homepage">
 	<meta name="image" content="">
-	<meta name="author" content="Xufeng Cai">
-    	<meta name="keywords" content="Xufeng Cai, SJTU, UW-Madison, Optimization, Deep Learning (DL), Machine Learning (ML), Mathematics">
+	<meta name="author" content="Zhenyu Huang">
+    	<meta name="keywords" content="Zhenyu Huang, WHU, SJTU, Mathematics">
 	
-	<meta name="og:title" content="Xufeng Cai">
-	<meta name="og:description" content="Xufeng Cai's homepage">
+	<meta name="og:title" content="Zhenyu Huang">
+	<meta name="og:description" content="Zhenyu Huang's homepage">
 	
-	<meta name="og:url" content="https://xufengcai.com/">
+	<meta name="og:url" content="https://zhenyuhuang.com/">
 	<meta name="og:site_name" content="">
 	<meta name="og:type" content="article">
 	
@@ -70,7 +70,7 @@ if (!doNotTrack) {
 				<span onclick="rev_menu_bar_toggle(this)" class="menu_icon"></span>
 				</a>
 				&nbsp;&nbsp;&nbsp;&nbsp;
-				<a href="/" class="namelogo">Xufeng Cai</a>
+				<a href="/" class="namelogo">Zhenyu Huang</a>
 				<div id="menu_bar", style="display: none; float: right;"> 
 				<menu>
 					<a href="/profiles/CV_XufengCai.pdf" style="color:#333;">CV</a>
