--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@ if (!doNotTrack) {
 	</div>
 	<!--
 		<div style="text-align: bottom">
-		<a href="https://xufengcai.com/" style="float: left;" class="namelogo">Xufeng Cai</a>
+		<a href="https://zhenyuhuang.com/" style="float: left;" class="namelogo">Zhenyu Huang</a>
 	
-	<a href="https://xufengcai.com/Free-Time-List/" style="color:#777; float: right">Free Time List</a>
-	<a href="https://xufengcai.com/Blog/" style="color:#777; float: right">Blog&nbsp;&nbsp;&nbsp;</a>
-	<a href="https://xufengcai.com/Resources/" style="color:#777; float: right">Resources&nbsp;&nbsp;&nbsp;</a>
-	<a href="https://xufengcai.com/profiles/cv.pdf" style="color:#777; float: right">CV&nbsp;&nbsp;&nbsp;</a>
+	<a href="https://zhenyuhuang.com/Free-Time-List/" style="color:#777; float: right">Free Time List</a>
+	<a href="https://zhenyuhuang.com/Blog/" style="color:#777; float: right">Blog&nbsp;&nbsp;&nbsp;</a>
+	<a href="https://zhenyuhuang.com/Resources/" style="color:#777; float: right">Resources&nbsp;&nbsp;&nbsp;</a>
+	<a href="https://zhenyuhuang.com/profiles/cv.pdf" style="color:#777; float: right">CV&nbsp;&nbsp;&nbsp;</a>
 	
 	</div>
 	-->
