--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@ if (!doNotTrack) {
 
 <p><img class="profile-picture" src="zephyr.jpg"></p>
 
-<p> I am currently a first year PhD student in the Computer Sciences Department at UW-Madison, 
-	advised by <a href="http://www.jelena-diakonikolas.com/">Jelena Diakonikolas</a>. 
-	Previously, I received a BS in Mathematics in the <a href="https://zhiyuan.sjtu.edu.cn/">Zhiyuan College</a> at Shanghai Jiao Tong University, 
-	where I was fortunate to do research with <a href="http://math.sjtu.edu.cn/faculty/xqzhang/">Xiaoqun Zhang</a> and <a href="https://ins.sjtu.edu.cn/people/shijin/#brief-introduction">Shi Jin</a>. 
+<p> I am currently a first year PhD student in the Institute of Natural Sciences <a href="https://ins.sjtu.edu.cn">(INS)</a> at Shanghai Jiaotong University, 
+	advised by <a href="https://ins.sjtu.edu.cn/people/shijin/#brief-introduction">Shi Jin</a>. 
+	Previously, I received a BS in Mathematics in the <a href="http://maths.whu.edu.cn">Wuhan University</a>.
 	</p>
 
-<p>Please reach out via xcai74 [at] wisc [dot] edu.</p>
+<p>Please reach out via zhenyuhuang [at] sjtu [dot] edu.cn </p>
 
 <p><br></p>
 
