--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ if (!doNotTrack) {
 <p><br></p>
 
 <h4 id="Reseach Interests" class="subtitle">Research Interests</h2>
-<p>My recent work has focused on the interplay between <b>optimization</b> and <b>machine learning</b>, especially in stochastic optimization and min-max optimization.</p>
+<p>My recent work has focused on the <b>stochastic numerical method</b> and <b>flui PDE</b>.</p>
 
 
 <script>
@@ -138,7 +138,7 @@ function absICM() {
 }
 </script>
 
-
+<!--
 <h4 id="Teaching" class="subtitle">Teaching</h4>
 <p>
 	<b>CS760</b>, Machine Learning, Daniel Pimentel-Alarcón, UW-Madison, Fall 2020 (TA).</br>
@@ -171,7 +171,7 @@ function absICM() {
 		Eventually our team was designated as Outstanding Winner (top 0.16% in over 20,000 teams in the world).
 </blockquote>
 </div>
-
+-->
 <!--
 <h2 id="explorations">Exploration</h2>
 <p><strong>Adaptive Moving Mesh Method for Blow-up Equations with e<sup>μ</sup> Nonlinearity</strong>
@@ -204,7 +204,7 @@ Coursework for <i>Numerical Methods for Differential Equations</i>, Spring 2019
 	</div>
 </footer>
 <div style="text-align: center;">
-<p class="footer-claim">&copy; 2020 Xufeng Cai.</p>
+<p class="footer-claim">&copy; 2022 Zhenyu Huang.</p>
 </div>
 </body>
 </html>
