--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ if (!doNotTrack) {
 				<a href="/" class="namelogo">Zhenyu Huang</a>
 				<div id="menu_bar", style="display: none; float: right;"> 
 				<menu>
-					<a href="/profiles/CV_XufengCai.pdf" style="color:#333;">CV</a>
+					<a href="/profiles/zyhCV.pdf" style="color:#333;">CV</a>
 					&nbsp;&nbsp;&nbsp;
 					<a href="/blog/" style="color:#333;">Blog</a>
 					&nbsp;&nbsp;&nbsp;
