--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ if (!doNotTrack) {
   <aside></aside>
   <p>
 
-<p><img class="profile-picture" src="zephyr.jpg"></p>
+<p><img class="profile-picture" src="zyh.png"></p>
 
 <p> I am currently a first year PhD student in the Institute of Natural Sciences <a href="https://ins.sjtu.edu.cn">(INS)</a> at Shanghai Jiaotong University, 
 	advised by <a href="https://ins.sjtu.edu.cn/people/shijin/#brief-introduction">Shi Jin</a>. 
