--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ if (!doNotTrack) {
 <p><br></p>
 
 <h4 id="Reseach Interests" class="subtitle">Research Interests</h2>
-<p>My recent work has focused on the <b>stochastic numerical method</b> and <b>flui PDE</b>.</p>
+<p>My recent work has focused on the <b>stochastic numerical method</b> and <b>kinetic theory</b>.</p>
 
 
 <script>
@@ -179,26 +179,26 @@ function absICM() {
 Coursework for <i>Numerical Methods for Differential Equations</i>, Spring 2019
 <br>
 [<a href="./explorations/2019NumPDE.pdf">report</a>, <a href=https://github.com/zephyr-cai/Numerical-Moving-Mesh-Method>code</a>]</p>
--->
+
 
 <h4 id="hobbies" class="subtitle">Hobbies</h4>
 <p>In my free time, I enjoy reading, photography, and basketball. Recently, I am into long-distance running.</p>
 
 </p>
 </div>
-
+-->
 <footer>
 	<div style="text-align: top">
 		<div style="float: left;">
 		<p class="footer-subtitle" style="font-size: 90%; color: #333; padding: 0;">MAILING ADDRESS </br>
-		<span style="font-family: serif; line-height: 1.5; color: #373a3c; font-size: 90%;">To be updated.</span>
+		<span style="font-family: serif; line-height: 1.5; color: #373a3c; font-size: 90%;">800 Dongchuan RD Shanghai, Minhang District.</span>
 		</p>
 		</div>
 		<div style="float: right;">
 		<p class="footer-subtitle" style="font-size: 90%; color: #333; padding: 0;">GET IN TOUCH </br>
-		<a href="https://www.facebook.com/xufeng.cai.9" class="morecontent" style="font-size: 80%;">FACEBOOK</a> / 
-		<a href="https://www.instagram.com/zephyrcai/" class="morecontent" style="font-size: 80%;">INSTAGRAM</a> / 
-		<a href="https://cn.linkedin.com/in/xufeng-cai-1777751b4" class="morecontent" style="font-size: 80%;">LINKEDIN</a>
+		<a href="https://github.com/zhenyuboy" class="morecontent" style="font-size: 80%;">Github</a> / 
+		<a href="https://weibo.com/u/5364544370" class="morecontent" style="font-size: 80%;">Weibo</a> / 
+		<a href="https://www.zhihu.com/people/huang-zhen-yu-6" class="morecontent" style="font-size: 80%;">Zhihu</a>
 		</p>
 		</div>
 	</div>
