--- a/index.html
+++ b/index.html
@@ -75,23 +75,26 @@ if (!doNotTrack) {
 				<menu>
 					<a href="/profile/zyhCV.pdf" style="color:#333;">CV</a>
 					&nbsp;&nbsp;&nbsp;
-					<a href="/blog/" style="color:#333;">Blog</a>
+					<a href="/notes/" style="color:#333;">Notes</a>
 					&nbsp;&nbsp;&nbsp;
+					<!--
 					<a href="/reading-list/" style="color:#333;">Reading List</a>
+                                        -->
 				</menu> 
 				</div>	 
 	</div>
-	<!--
+	
 		<div style="text-align: bottom">
 		<a href="https://zhenyuhuang.com/" style="float: left;" class="namelogo">Zhenyu Huang</a>
-	
+	<!--
 	<a href="https://zhenyuhuang.com/Free-Time-List/" style="color:#777; float: right">Free Time List</a>
 	<a href="https://zhenyuhuang.com/Blog/" style="color:#777; float: right">Blog&nbsp;&nbsp;&nbsp;</a>
 	<a href="https://zhenyuhuang.com/Resources/" style="color:#777; float: right">Resources&nbsp;&nbsp;&nbsp;</a>
-	<a href="https://zhenyuhuang.com/profiles/cv.pdf" style="color:#777; float: right">CV&nbsp;&nbsp;&nbsp;</a>
+        -->
+	<a href="https://zhenyuhuang.com/profile/zyhCV.pdf" style="color:#777; float: right">CV&nbsp;&nbsp;&nbsp;</a>
 	
 	</div>
-	-->
+	
 </header>
 
 
@@ -103,12 +106,12 @@ if (!doNotTrack) {
 
 <p><img class="profile-picture" src="zyh.png"></p>
 
-<p> I am currently a first year PhD student in the Institute of Natural Sciences <a href="https://ins.sjtu.edu.cn">(INS)</a> at Shanghai Jiaotong University, 
+<p> I am currently a first year Ph.D student in the Institute of Natural Sciences <a href="https://ins.sjtu.edu.cn">(INS)</a> at Shanghai Jiaotong University, 
 	advised by <a href="https://ins.sjtu.edu.cn/people/shijin/#brief-introduction">Shi Jin</a>. 
-	Previously, I received a BS in Mathematics in the <a href="http://maths.whu.edu.cn">Wuhan University</a>.
+	Previously, I received a BS in Mathematics in the Department of Mathematics and Statistics at <a href="http://maths.whu.edu.cn">Wuhan University</a>.
 	</p>
 
-<p>Please reach out via zhenyuhuang [at] sjtu [dot] edu.cn </p>
+<p>Please reach out via zhenyuhuang [at] sjtu [dot] edu [dot] cn </p>
 
 <p><br></p>
 
