--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ if (!doNotTrack) {
   <p>
 
 <p><img class="profile-picture" src="zyh.png"></p>
-
+<span style='font-size:100px;'>&#9803;</span>
 <p> I am currently a first year Ph.D student in the Institute of Natural Sciences <a href="https://ins.sjtu.edu.cn">(INS)</a> at Shanghai Jiaotong University, 
 	advised by <a href="https://ins.sjtu.edu.cn/people/shijin/#brief-introduction">Shi Jin</a>. 
 	Previously, I received a BS in Mathematics in the Department of Mathematics and Statistics at <a href="http://maths.whu.edu.cn">Wuhan University</a>.
